# ruwuma

./: Cargo.toml  README.md
.github/workflows/: ci.yml
contrib/: how_to_release.md
crates/ruma/: CHANGELOG.md  Cargo.toml
crates/ruma-appservice-api/src/: callback.rs  lib.rs
crates/ruma-appservice-api/src/callback/: user_may_invite.rs  user_may_join_room.rs
crates/ruma-client-api/: CHANGELOG.md  Cargo.toml
crates/ruma-client-api/src/: dehydrated_device.rs  lib.rs  report_user.rs  space.rs  uiaa.rs
crates/ruma-client-api/src/discovery/: get_authorization_server_metadata.rs
crates/ruma-common/: CHANGELOG.md  Cargo.toml
crates/ruma-common/src/: directory.rs  encryption.rs  identifiers.rs  media.rs  push.rs  serde.rs  thirdparty.rs
crates/ruma-common/src/api/: error.rs  (+1 more)
crates/ruma-events/: CHANGELOG.md  Cargo.toml
crates/ruma-events/src/: enums.rs  image_pack.rs  message.rs  receipt.rs  room.rs
crates/ruma-federation-api/: CHANGELOG.md  Cargo.toml
crates/ruma-federation-api/src/: room.rs  space.rs
crates/ruma-identifiers-validation/: Cargo.toml
crates/ruma-identifiers-validation/src/: lib.rs  user_id.rs
crates/ruma-identity-service-api/: CHANGELOG.md
crates/ruma-macros/src/: identifiers.rs  lib.rs
crates/ruma-push-gateway-api/src/: send_event_notification.rs
crates/ruma-server-util/: Cargo.toml
crates/ruma-signatures/: Cargo.toml
crates/ruma-signatures/src/: functions.rs  lib.rs  signatures.rs
crates/ruma-state-res/src/: lib.rs
crates/ruma/src/: lib.rs
old/ruma-state-res/src/: test_utils.rs
xtask/src/: ci.rs  release.rs
(+36 files in other folders)
