[package]
name = "ruma-identifiers-validation"
description = "Validation logic for ruma-common and ruma-macros"
homepage = "https://ruma.dev/"
repository = "https://github.com/ruma/ruma"
license = "MIT"
version = "0.9.5"
edition = "2021"
rust-version = { workspace = true }

[package.metadata.docs.rs]
all-features = true

[features]
# Don't validate the version in `server_signing_key_version::validate`.
compat-server-signing-key-version = []

[dependencies]
js_int = { workspace = true }
thiserror = { workspace = true }

[lints]
workspace = true
